--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 scratch_macros = { path = "scratch_macros" }
 # External Dependencies
 bimap = "0.6.3"
-cranelift = "0.117.2"
-cranelift-codegen = "0.117.2"
-cranelift-module = "0.117.2"
+# cranelift = "0.117.2"
+# cranelift-codegen = "0.117.2"
+# cranelift-module = "0.117.2"
 gilrs = { version = "0.11.0", default-features = false, features = ['xinput']}
 spin_sleep = "1.3.0"
 itertools = "0.14.0"
@@ -18,3 +18,6 @@ image = "0.25.6"
 rand = "0.9.0"
 sha2 = "0.10.8"
 glam = "0.30.1"
+rayon = "1.10.0"
+imageproc = "0.25.0"
+noise = "0.9.0"
